--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script>
+      window.LayersPortalOptions = {
+        appId: 'hackathon-sophia',
+        insidePortalOnly: false,
+        manualLoadingControl: false
+      }
+    </script>
+    <script type="text/javascript" src="https://js.layers.digital/v1/LayersPortal.js"></script>
   </head>
   <body>
     <noscript>
